--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,46 @@
   text-align: center;
 }
 
-.question-container {
-  background-color: rgb(95, 158, 139);
-  border-radius: 5px;
+.quiz-container {
+  position: relative;
   width: 50%;
   margin: 70px auto;
-  height: 50%;
+}  
+
+.start-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  background-color: rgb(95, 158, 139);
+  top: 0;
+  left: 0;
+  border-radius: 5px;
+}
+
+.start-button {
+  background-color: rgb(122, 58, 122);
+  color:rgb(233, 245, 244);
+  border-radius: 5px;
+  padding: 10px;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 3em;
+  z-index: 10;
+}
+
+.start-button:hover {
+  cursor: pointer;
+  color: rgb(122, 58, 122);
+  background-color: rgb(233, 245, 244)
+}
+
+.question-container {
+  border-radius: 5px;
+  background-color: rgb(95, 158, 139);
 }
 
 .question-info {
@@ -29,7 +63,7 @@
   background-color: rgb(233, 245, 244);
   border-radius: 5px;
   padding: 10px;
-  width: 50%;
+  width: 80%;
   text-align: center;
   margin: 30px auto;
   font-size: 1.5em;
