--- a/src/App.css
+++ b/src/App.css
@@ -3,48 +3,27 @@
 }
 
 .quiz-container {
-  position: relative;
   width: 50%;
   margin: 70px auto;
-}  
-
-.start-container {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  margin: auto;
-  background-color: rgb(95, 158, 139);
-  top: 0;
-  left: 0;
-  border-radius: 5px;
 }
 
-.result-container {
-  background-color: rgb(95, 158, 139);
-  border-radius: 5px;
+.start-container {
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .start-button {
   background-color: rgb(122, 58, 122);
   color:rgb(233, 245, 244);
+  border: none;
   border-radius: 5px;
   padding: 10px;
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   font-size: 3em;
-  z-index: 10;
 }
 
-.start-button:hover {
-  cursor: pointer;
-  color: rgb(122, 58, 122);
-  background-color: rgb(233, 245, 244)
-}
-
-.question-container {
+.question-container, .result-container, .start-container {
   border-radius: 5px;
   background-color: rgb(95, 158, 139);
 }
@@ -95,11 +74,21 @@
   border: none;
 }
 
-.next-question:hover {
+.next-question:hover, .play-again:hover, .start-button:hover {
   color:rgb(122, 58, 122);
   background-color: rgb(233, 245, 244);
+  cursor: pointer;
 }
 
-.next-question:hover {
-  cursor: pointer;
+.result-info {
+  padding: 40px;
+  text-align: center;
+}
+
+.play-again {
+  border: none;
+  padding: 10px;
+  background-color: rgb(122, 58, 122);
+  border-radius: 3px;
+  color:rgb(233, 245, 244);
 }
