--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 * {
   box-sizing: border-box;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-body {
-  background-color: rgb(245, 224, 238);
+  margin: 0;
+  padding: 0;
 }
